--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:padding="16dp">
 
-    <TextView
-        android:id="@+id/miwokText"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="lutti"/>
+        app:srcCompat="@mipmap/ic_launcher"/>
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/miwokText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="lutti"/>
+
+        <TextView
         android:id="@+id/englishText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="one"/>
+
+    </LinearLayout>
 </LinearLayout>
