--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,33 +4,34 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="16dp">
+              android:layout_height="wrap_content"
+              android:minHeight="88dp"
+              >
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        app:srcCompat="@mipmap/ic_launcher"/>
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        android:background="@color/tan_background"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="88dp"
+        android:orientation="vertical"
+        android:background="@color/category_numbers">
 
 
         <TextView
             android:id="@+id/miwokText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/ListItemStyle"
+            android:gravity="bottom"
+            android:textStyle="bold"
             tools:text="lutti"/>
 
         <TextView
-        android:id="@+id/englishText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="one"/>
+            android:id="@+id/englishText"
+            style="@style/ListItemStyle"
+            tools:text="one"/>
 
     </LinearLayout>
 </LinearLayout>
