--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,10 +15,10 @@
         android:background="@color/tan_background"/>
 
     <LinearLayout
+        android:id="@+id/textLayout"
         android:layout_width="match_parent"
         android:layout_height="88dp"
-        android:orientation="vertical"
-        android:background="@color/category_numbers">
+        android:orientation="vertical">
 
 
         <TextView
