--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,31 +4,41 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+                android:background="@color/tan_background">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_marginRight="16dp"/>
+        android:layout_width="88dp"
+        android:layout_height="88dp"
+        app:srcCompat="@mipmap/ic_launcher"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="88dp"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:background="#FD8E09">
 
         <TextView
             android:id="@+id/miwok_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/miwok"/>
+            android:layout_height="0dp"
+            tools:text="@string/miwok"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:gravity="bottom"/>
 
         <TextView
             android:id="@+id/english_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/english"/>
+            android:layout_height="0dp"
+            tools:text="@string/english"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 
