--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,21 +4,21 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-                android:background="@color/tan_background">
+              android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="88dp"
         android:layout_height="88dp"
-        app:srcCompat="@mipmap/ic_launcher"/>
+        app:srcCompat="@mipmap/ic_launcher"
+        android:background="@color/tan_background"/>
 
     <LinearLayout
+        android:id="@+id/verticalLayout"
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:background="#FD8E09">
+        android:paddingLeft="16dp">
 
         <TextView
             android:id="@+id/miwok_text_view"
