--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -36,4 +36,12 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/iv_play_button"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:paddingRight="16dp"
+        app:srcCompat="@drawable/ic_play_arrow_white_24dp"/>
+
 </LinearLayout>
